--- a/index.html
+++ b/index.html
@@ -12,6 +12,52 @@
 </head>
 
 <body>
+    <div class="bg" style="background-image: url(images/bg.jpg)">
+        <div class="header-topbar">
+            <div class="container">
+                <ul class="pull-left">
+                    <li>
+                        <a href="#" style="border-right: 1px solid rgba(255, 255, 255, 0.3);">
+                            <i class="fa fa-phone" aria-hidden="true"></i> +024 236 255
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                </ul>
+                <ul class="pull-right">
+                    <li>
+                        <a href="">
+                            <i class="fa fa-question-circle" aria-hidden="true"></i> Trợ giúp
+                        </a>
+                    </li>
+                    <li><span class="rot">|</span></li>
+                    <li>
+                        <a href="">
+                            <i class="fa fa-sign-in" aria-hidden="true"></i> Đăng nhập
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
+                        <h1 class="banner">Hãy đi khi còn trẻ</h1>
+                        <h4>EXPLORE OUR ECO AND ADVENTURE TRAVEL ITINERARIES</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
