--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="bg" style="background-image: url(images/bg.jpg)">
+    <div class="bg" style="background-image: url(images/bg1.jpg)">
         <div class="header-topbar">
             <div class="container">
                 <ul class="pull-left">
@@ -41,7 +41,13 @@
                     <li><span class="rot">|</span></li>
                     <li>
                         <a href="">
-                            <i class="fa fa-sign-in" aria-hidden="true"></i> Đăng nhập
+                            <i class="fa fa-info-circle" aria-hidden="true"></i> Thông tin
+                        </a>
+                    </li>
+                    <li><span class="rot">|</span></li>
+                    <li>
+                        <a href="">
+                            <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Đăng ký
                         </a>
                     </li>
                 </ul>
@@ -50,9 +56,12 @@
         <div class="content">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2 col-sm-12 text-center">
-                        <h1 class="banner">Hãy đi khi còn trẻ</h1>
+                    <div class="col-md-12 col-sm-12 text-center">
+                        <h1 class="banner">Chào mừng đến câu lạc bộ epc</h1>
                         <h4>EXPLORE OUR ECO AND ADVENTURE TRAVEL ITINERARIES</h4>
+                        <a href="">
+                            <i class="fa fa-google-plus" aria-hidden="true"></i> Đăng nhập với Google
+                        </a>
                     </div>
                 </div>
             </div>
