--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="bg" style="background-image: url(images/bg1.jpg)">
+    <div class="bg" style="background-image: url(images/bg.jpg)">
         <div class="header-topbar">
             <div class="container">
                 <ul class="pull-left">
@@ -46,7 +46,7 @@
                     </li>
                     <li><span class="rot">|</span></li>
                     <li>
-                        <a href="">
+                        <a href="#" data-toggle="modal" data-target="#modalRegister">
                             <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Đăng ký
                         </a>
                     </li>
@@ -65,6 +65,47 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="modalRegister" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Đăng ký tài khoản</h4>
+                </div>
+                <div class="modal-body" style="padding-top: 30px;">
+                    <form class="form-horizontal" action="">
+                        <div class="form-group">
+                            <label class="control-label col-sm-4" for="email">Nhập emai (Gmail):</label>
+                            <div class="col-sm-8">
+                                <input type="email" class="form-control" id="email" placeholder="" name="email">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-4" for="pwd">Nhập mật khẩu:</label>
+                            <div class="col-sm-8">
+                                <input type="password" class="form-control" id="pwd1" placeholder="" name="pwd1">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-4" for="pwd">Nhập lại mật khẩu:</label>
+                            <div class="col-sm-8">
+                                <input type="password" class="form-control" id="pwd2" placeholder="" name="pwd2">
+                            </div>
+                        </div>
+                    </form>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-danger">&nbsp;<i class="fa fa-check" aria-hidden="true"></i> Đăng ký&nbsp;</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Hủy bỏ</button>
+                </div>
+            </div>
+
         </div>
     </div>
 
